# ml-equilibrium-olg

./: .gitignore  LICENSE  Makefile  README.md  bvp_reference_heterogeneous.ipynb  hjb_1d_hardBC_het_picardBaseline.ipynb  hjb_1d_hardBC_het_spectral.ipynb  hjb_1d_hardBC_het_structuralBaseline.ipynb  hjb_1d_hardBC_heterogeneous.ipynb  hjb_2d_hardBC_CRRA.ipynb  hjb_2d_hardBC_CRRA_minimal.ipynb  hjb_2d_hardBC_CRRA_tier12.ipynb  hjb_2d_hardBC_LOG.ipynb  hjb_2d_hardBC_LOG_minimal.ipynb  hjb_2d_hardBC_LOG_tier12.ipynb  log_policy_history.json  pyproject.toml  requirements-freeze.txt  requirements.in
docs/theory/: 00_notation.md  01_objects_to_implement.md  02_log_benchmark_map.md
scripts/: run_log_benchmark.py  smoke_test.py  train_log_policy.py  train_log_policy_structural.py
src/ml/: losses.py  networks.py  trainer.py
src/model/: economy.py  log_analytic.py  parameters.py
src/solvers/: analytic_log.py
tests/: test_imports.py  test_log_benchmark.py
